--- a/step.yml
+++ b/step.yml
@@ -20,7 +20,7 @@ type_tags:
 is_requires_admin_user: false
 is_always_run: false
 is_skippable: false
-deps: []
+deps:
 run_if: ""
 inputs:
   - api_key: ""
